tests/parse-errors/issue062.zir
fun comp test() {
  x <- take;
  emit (x+1)
}

read[int] >>> standalone (repeat test()) >>> write[int]
